Update Post author nickname to clip off when overflowing. Update Post author username to stack under the nickname when in tablet view to prevent clipping with the menu icon. Update PanelSiteInfo to fill the remaining width when in mobile view. Fix unnecessary right-margin between content panels in tablet view.

--- a/src/client/scss/components/_PanelSiteInfo.scss
+++ b/src/client/scss/components/_PanelSiteInfo.scss
@@ -28,4 +28,7 @@
 		margin-top: 10px;
 		width: 50%;
 	}
+	@include for-mobile-down {
+		width: 100%;
+	}
 }
