--- a/src/client/scss/partials/_content.scss
+++ b/src/client/scss/partials/_content.scss
@@ -21,7 +21,10 @@
 	@include for-tablet-down {
 		flex-direction: column;
 		align-items: stretch;
-		
+
+		> :not(:last-child) {
+			margin-right: 0;
+		}
 		.panel-user {
 			display: none;
 		}
